<resources>
    <string name="app_name">APPoeira</string>
    <string name="failed">Algo fue mal</string>
    <string name="openParent">(</string>
    <string name="closeParent">)</string>
    <string name="space"> </string>
    <string name="locationFailed">Problema al obtener la localización</string>
    <string name="tvStringWelcomeMessage">¡Hola, Capoeirista!</string>
    <string name="tvStringEducationalPermission">Para ver los grupos, rodas, eventos cercanos, necesitamos que nos permitas acceder a la funcionalidad de geolocalización de tu dispositivo.</string>
    <string name="btnStringGrantAccess">Permitir Acceso</string>
    <string name="groupName" />
    <string name="groupDistance" />
    <string name="groupDistanceKm">Km</string>
    <string name="groupPhone" />
    <string name="groupDetailMore">Más información</string>
    <string name="groupDetailMoreName" />
    <string name="groupDetailMoreVerified">The group is verified by the community</string>
    <string name="groupDetailMoreVerification">¿Has estado aquí?</string>
    <string name="groupDetailMoreVotes" />
    <string name="groupDetailMoreJoinGroup">Unirse a este grupo</string>
    <string name="groupDetailMoreNumberOfComments">Ver comentarios</string>
    <string name="groupDetailMoreNumberOfCommentsNum" />
    <string name="groupDetailMoreCommentGroup">Dejar un comentario</string>
    <string name="groupDetailMoreNumberOfMembers">Ver miembros</string>
    <string name="groupDetailMoreNumberOfMembersNum" />
    <string name="groupDetailMoreOwnersTitle"><u>Responsables</u></string>
    <string name="groupDetailMoreFrontLineTitle"><u>Línea de frente</u></string>
    <string name="groupDetailMoreStudentsTitle"><u>Alumnos</u></string>
    <string name="groupDetailMoreFriendsTitle"><u>Amigos</u></string>
    <string name="groupDetailMoreGroupVerification">Si conoces este grupo, confirma que has estado aquí. Esto nos hará la vida más fácil.</string>
    <string name="page_title_group_list">Lista De Grupos</string>
    <string name="page_title_group_detail">Grupo</string>
    <string name="page_title_roda_list">Lista De Rodas</string>
    <string name="page_title_event_list">Lista De Eventos</string>
    <string name="page_title_online_list">Lista De Online</string>
    <string name="page_title_user_detail">Capoeirista</string>
    <string name="page_title_roda_detail">Roda</string>
    <string name="page_title_event_detail">Evento</string>
    <string name="page_title_online_detail">Online</string>
    <string name="navMenuGroups">Groups</string>
    <string name="navMenuOnline">Online</string>
    <string name="navMenuRodas">Rodas</string>
    <string name="navMenuEvents">Eventos</string>
    <string name="signupApelhido">Apelhido</string>
    <string name="signupName">Nombre</string>
    <string name="signupLastname">Apellido</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Contraseña</string>
    <string name="signupPassword2">Repite la contraseña</string>
    <string name="buttonSignup">SignUp</string>
    <string name="buttonLogin">Login</string>
    <string name="goToSignUp">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="signupEmailExists">Ya existe un usuario con este Email</string>
    <string name="signupSelectYourRank">Selecciona tu rango</string>
    <string name="signupIncorrectPassword">La contraseña no coincide o no debe estar vacía</string>
    <string name="signupValidEmail">Debes introducir un email válido</string>
    <string name="signupValidApelhido">Debes introducir un apelhido</string>
    <string name="userDetailRank" />
    <string name="userDetailName" />
    <string name="userDetailJoined">"Miembro desde "</string>
    <string name="userDetailDateJoin" />
    <string name="userDetailNumberOfFollowers" />
    <string name="userDetailFollowers">Followers</string>
    <string name="userDetailNumberOfFollowed" />
    <string name="userDetailFollowed">Followed</string>
    <string name="userDetailGroupsTitle"><u>Grupos</u></string>
    <string name="userDetailEventsTitle"><u>Eventos</u></string>
    <string name="userDetailRodasTitle"><u>Rodas</u></string>
    <string name="userDetailOnlinesTitle"><u>Clases online</u></string>
    <string name="userGroupListApelhido" />
    <string name="userGroupListRank" />
    <string name="userGroupListPremium" />
    <string name="groupSpinner">Papel en este grupo</string>
    <string name="joinGroupExplanation">Selecciona tu posición dentro de este grupo</string>
    <string name="joinGroupRoleVerification">Para acceder a este rol en el grupo, es necesarion que verifiquemos antes la veracidad de los datos. Tu solicitud se enviará, y la contrastaremos con la comunidad. Te avisaremos cuando la solicitud se resuelva.</string>
    <string name="joinGroup">Unirse</string>
    <string name="rankGroupSpinner">Rango</string>
    <string-array name="group_rank_array">
        <item>Selecciona una opción</item>
        <item>Responsable</item>
        <item>Línea de frente</item>
        <item>Aluno</item>
        <item>Amigo</item>
    </string-array>
    <string name="rankSpinner">Rango</string>
    <string name="rankSpinner1">Iniciante</string>
    <string name="rankSpinner2">Aluno</string>
    <string name="rankSpinner3">Aluna</string>
    <string name="rankSpinner4">Graduado</string>
    <string name="rankSpinner5">Graduada</string>
    <string name="rankSpinner6">Instrutor</string>
    <string name="rankSpinner7">Instrutora</string>
    <string name="rankSpinner8">Formado</string>
    <string name="rankSpinner9">Formada</string>
    <string name="rankSpinner10">Professor</string>
    <string name="rankSpinner11">Professora</string>
    <string name="rankSpinner12">Treinel</string>
    <string name="rankSpinner13">Contra Mestre</string>
    <string name="rankSpinner14">Contra Mestra</string>
    <string name="rankSpinner15">Mestre</string>
    <string name="rankSpinner16">Mestra</string>
    <string-array name="ranks_array">
        <item>Selecciona una opción</item>
        <item>@string/rankSpinner1</item>
        <item>@string/rankSpinner2</item>
        <item>@string/rankSpinner3</item>
        <item>@string/rankSpinner4</item>
        <item>@string/rankSpinner5</item>
        <item>@string/rankSpinner6</item>
        <item>@string/rankSpinner7</item>
        <item>@string/rankSpinner8</item>
        <item>@string/rankSpinner9</item>
        <item>@string/rankSpinner10</item>
        <item>@string/rankSpinner11</item>
        <item>@string/rankSpinner12</item>
        <item>@string/rankSpinner13</item>
        <item>@string/rankSpinner14</item>
        <item>@string/rankSpinner15</item>
        <item>@string/rankSpinner16</item>
    </string-array>
    <string name="postComment">Publicar</string>
    <string name="newCommentHint">Escribe tu comentario</string>
    <string name="groupUserListName" />
    <string name="userGroupListRole" />
    <string name="popUpHaveYouBeenHere">Si conoces este grupo, confirma que has estado aquí. Esto nos hará la vida más fácil.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navMenuSignUp">SignUp</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="topMenuSearch">Buscar</string>
    <string name="topMenuNews">Novedades</string>
    <string name="topMenuLogin">Inicia sesión</string>
    <string name="loginPassword">Password</string>
    <string name="content_description_login_menu">Go to login</string>
    <string name="content_description_search_menu">Go to search menu</string>
    <string name="content_description_news_menu">Go to news</string>
    <string name="distanceText" />
    <string name="userProfileRank" />
    <string name="userProfileJoined" />
    <string name="userProfileDateJoin" />
    <string name="userProfileNumberOfFollowers" />
    <string name="userProfileFollowers" />
    <string name="userProfileNumberOfFollowed" />
    <string name="userProfileFollowed" />
    <string name="userProfileEventsTitle" />
    <string name="ModifyProfile">Modificar Perfil</string>
    <string name="ModifyAvatar">Modificar</string>
    <string name="changePassword">Cambiar Contraseña</string>
    <string name="modifyPasswordOld">Contraseña actual</string>
    <string name="modifyPasswordNew">Nueva Contraseña</string>
    <string name="modifyPasswordNew2">Repite Contraseña</string>
    <string name="ModifyAvatarUrl">Pega aquí la url de la imagen</string>
    <string name="ViewUserActivity">Ver actividad</string>
    <string name="ViewUserInfo">Ver información</string>
    <string name="userDetailActivityTitle"><u>Actividad</u></string>
    <string name="groupCommentsTitle"><u>Comentarios</u></string>
    <string name="userDetailFollowersTitle"><u>Followers</u></string>
    <string name="userDetailFollowedTitle"><u>Followed</u></string>
    <string name="userLogOut">Desconectarse</string>
    <string name="navMenuAdd">Crear</string>
    <string name="rodaName" />
    <string name="rodaDistance" />
    <string name="rodaPhone" />
    <string name="rodaDetailName" />
    <string name="rodaModifName">Nombre</string>
    <string name="rodaModifDescription">Descripción</string>
    <string name="searchUsersHint">Busca Usuarios para invitarlos</string>
    <string name="serchTitle">Busca Usuarios para invitarlos</string>
    <string name="locationTitle">Selecciona el lugar en el mapa</string>
    <string name="page_title_login">Login</string>
    <string name="page_title_sign_up">Registrarse</string>
    <string name="page_title_update_event">Nuevo Evento</string>
    <string name="page_title_update_group">Nuevo Grupo</string>
    <string name="page_title_help">Ayuda</string>
    <string name="page_title_news">Noticias</string>
    <string name="page_title_update_online">Nuevo Evento Online</string>
    <string name="page_title_update_roda">Nueva Roda</string>
    <string name="page_title_search">Buscar</string>
    <string name="page_title_update_user">Modificar Perfil</string>
    <string name="groupDetailMoreIKnowItButton">¡Lo conozco!</string>
    <string name="sendRating">Enviar</string>
    <string name="wouldYouLikeToRate">¿te gustría valorar tu experiencia?</string>
    <string name="dateTitle">Selecciona una fecha</string>
    <string name="hourTitle">Selecciona una hora</string>
    <string name="platformSpinner">Plataforma</string>
    <string name="rodaModifPhone">Teléfono de contacto</string>
    <string name="platformSpinner1">APPoeira</string>
    <string name="platformSpinner2">Zoom</string>
    <string name="platformSpinner3">Instagram</string>
    <string name="platformSpinner4">Skype</string>
    <string name="platformSpinner5">Jitsi Meet</string>
    <string name="platformSpinner6">Presencial</string>
    <string name="rodaModifKey">Clave de acceso</string>
    <string name="searchUserButton">Personas</string>
    <string name="searcGroupButton">Grupos</string>
    <string name="searcRodaButton">Rodas</string>
    <string name="searcOnlineButton">Online</string>
    <string name="searcEventButton">Eventos</string>
    <string name="searchInstructions">Selecciona al menos una opción para buscar en APPoeira</string>
    <string name="Cancel">Cancelar</string>
    <string name="Confirm">Eliminar</string>
    <string name="carefulBeforDelete">"¡Cuidado! Estás a punto de eliminar de manera permanente. "</string>
</resources>