<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_login"
        android:title="@string/topMenuLogin"
        android:contentDescription="@string/content_description_login_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/topMenuSearch"
        android:contentDescription="@string/content_description_search_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news"
        android:title="@string/topMenuNews"
        android:contentDescription="@string/content_description_news_menu"
        app:showAsAction="ifRoom" />

</menu>
