<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modificationHeaderConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:mipmap/sym_def_app_icon" />

    <TextView
        android:id="@+id/modifyAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ModifyAvatar"
        android:background="@color/colorWhite"
        android:alpha="0.7"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="@+id/avatar" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rodaDetailName"
        android:ems="14"
        android:layout_marginTop="10dp"
        android:hint="@string/rodaModifName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:layout_marginTop="10dp"
        android:hint="@string/rodaModifDescription"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <EditText
        android:id="@+id/groupUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:layout_marginTop="10dp"
        android:hint="@string/rodaModifDescription"
        android:inputType="textUri"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/rodaModifPhone"
        android:inputType="phone"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/groupUrl"
        app:layout_constraintStart_toStartOf="@+id/groupUrl"
        app:layout_constraintTop_toBottomOf="@+id/groupUrl"/>

    <EditText
        android:id="@+id/key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/rodaModifKey"
        android:inputType="phone"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone"/>

</androidx.constraintlayout.widget.ConstraintLayout>