<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchView.SearchActivity">

    <include
        android:id="@+id/include6"
        layout="@layout/common_top_navigation" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight=".50"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include6">

        <Button
            android:id="@+id/searchUsersBtn"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/searchUserButton" />

        <Button
            android:id="@+id/searchGroupsBtn"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/searcGroupButton" />

        <Button
            android:id="@+id/searchRodaBtn"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/searcRodaButton" />

        <Button
            android:id="@+id/searchEventBtn"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/searcEventButton" />

        <Button
            android:id="@+id/searchOnlineBtn"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/searcOnlineButton" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:id="@+id/relativeSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"
        tools:context=".searchView.SearchActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modificationDatesConstraint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchInstructions"
            android:textAlignment="center"
            android:id="@+id/searchInstructions"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/modificationDatesConstraint"/>

        <include layout="@layout/common_search_user"/>

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/veryfyEmailFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include6"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        app:itemIconTint="@drawable/ic_menu_bottm_color_selector"
        app:itemTextColor="@drawable/ic_menu_bottm_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled" >

        <include layout="@layout/common_add_button"/>

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>