<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getPermissionsView.GetPermissionsActivity">

    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tvStringWelcomeMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEducationalPermission"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/tvStringEducationalPermission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcomeMessage"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMessage"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/btnGrantAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/btnStringGrantAccess"
        android:onClick="grantPermissions"
        app:layout_constraintEnd_toEndOf="@+id/tvEducationalPermission"
        app:layout_constraintStart_toStartOf="@+id/tvEducationalPermission"
        app:layout_constraintTop_toBottomOf="@+id/tvEducationalPermission" />
</androidx.constraintlayout.widget.ConstraintLayout>